// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlackListedIps.vue > fetches and displays blacklisted IPs 1`] = `
"<img src="/src/assets/images/logo.png" class="w-50 m-auto">
<div class="flex justify-center"><input type="text" placeholder="Search IP address..." class="bg-white border border-gray-100 px-2 py-1 rounded"><button class="bg-green-700 text-white py-1 px-2 border border-green-800 mx-3 rounded"><span>Refresh IP List</span></button></div>
<div class="flex flex-wrap justify-center gap-3 my-5">
  <div class="bg-gray-100 rounded p-2 w-[150px]">1.1.1.1</div>
  <div class="bg-gray-100 rounded p-2 w-[150px]">2.2.2.2</div>
  <div class="bg-gray-100 rounded p-2 w-[150px]">3.3.3.3</div>
  <div class="bg-gray-100 rounded p-2 w-[150px]">4.4.4.4</div>
  <div class="bg-gray-100 rounded p-2 w-[150px]">5.5.5.5</div>
</div>
<!--v-if-->"
`;

exports[`BlackListedIps.vue > filters IPs based on search term 1`] = `
"<img src="/src/assets/images/logo.png" class="w-50 m-auto">
<div class="flex justify-center"><input type="text" placeholder="Search IP address..." class="bg-white border border-gray-100 px-2 py-1 rounded"><button class="bg-green-700 text-white py-1 px-2 border border-green-800 mx-3 rounded"><span>Refresh IP List</span></button></div>
<div class="flex flex-wrap justify-center gap-3 my-5">
  <div class="bg-gray-100 rounded p-2 w-[150px]">2.2.2.2</div>
</div>
<!--v-if-->"
`;

exports[`BlackListedIps.vue > shows message when no IPs match 1`] = `
"<img src="/src/assets/images/logo.png" class="w-50 m-auto">
<div class="flex justify-center"><input type="text" placeholder="Search IP address..." class="bg-white border border-gray-100 px-2 py-1 rounded"><button class="bg-green-700 text-white py-1 px-2 border border-green-800 mx-3 rounded"><span>Refresh IP List</span></button></div>
<div class="text-gray-100 text-center my-50"> No blacklisted IP address found containing 9.9.9.9</div>
<!--v-if-->"
`;
